--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Abhisha1/Software-Processes-and-Management-Project#readme",
   "dependencies": {
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
