--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,7 @@
-[build]
-  # Directory to change to before starting a build.
-  # This is where we will look for package.json/.nvmrc/etc.
-  base = "client/"
-
-
-  # Default build command.
-  command = "npm start"
+[[redirects]]
+    from = "/*"
+    to = "/index.html"
+    status = 200
 
 [[headers]]
     for = "/*"
