--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "cypress": "^4.5.0",
+    "date-fns": "^2.13.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-datepicker": "^2.14.1",
