--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,14 @@
     "bootstrap": "^4.4.1",
     "cypress": "^4.5.0",
     "date-fns": "^2.13.0",
+    "google-maps-react": "^2.0.6",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-datepicker": "^2.14.1",
     "react-dom": "^16.13.1",
+    "react-google-places-autocomplete": "^2.0.6",
+    "react-places-autocomplete": "^7.2.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-toastify": "^6.0.5"
@@ -43,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.6"
   }
 }
