--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.9.12",
-    "nodemon": "^2.0.3"
+    "nodemon": "^2.0.3",
+    "react-places-autocomplete": "^7.2.1"
   }
 }
